@@ -1,3 +1,8 @@
+2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (InterpEval): correctly handle no args case.
+	(New): autoload tbcload when it exists.
+
 2002-06-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: call Init with eval to break out argv into args.
